# platform

./: .gitignore  README.md  pyproject.toml  train_cifar_mlp.py
.github/workflows/: deploy-web.yml
fingerprinting/: artifacts.py  cli.py
fingerprinting/optimizers/: entry.py
fingerprints/cifar10_resnet18_v1/adafactor/: cifar10_resnet18_v1__adafactor__seed0__762b46342a.json
fingerprints/cifar10_resnet18_v1/adamw/: cifar10_resnet18_v1__adamw__seed0__7faa7b1ee5.json  cifar10_resnet18_v1__adamw__seed0__9a1b6e9aa0.json
fingerprints/cifar10_resnet18_v1/lion/: cifar10_resnet18_v1__lion__seed0__c5d6655284.json
fingerprints/cifar10_resnet18_v1/muon/: cifar10_resnet18_v1__muon__seed0__6c854aed37.json  cifar10_resnet18_v1__muon__seed0__c96a9e65e8.json
fingerprints/cifar10_resnet18_v1/sam_adamw/: cifar10_resnet18_v1__sam_adamw__seed0__e8a21ba3eb.json
fingerprints/cifar10_resnet18_v1/sgd/: cifar10_resnet18_v1__sgd__seed0__0750b5e315.json
fingerprints/cifar10_resnet18_v1/sgd_momentum/: cifar10_resnet18_v1__sgd_momentum__seed0__5eb6ea5ae3.json
fingerprints/cifar10_resnet18_v1/shampoo_default/: cifar10_resnet18_v1__shampoo_default__seed0__257660a5e4.json  (+1 more)
nanogpt/examples/: aurora.py  muon.py  soaph.py
optimizers/: __init__.py  muon.py
scratch/: run_minimal.sbatch  run_minimal_part2.sbatch  run_minimal_part3.sbatch
scripts/: generate-trace-manifest.mjs  trace-display-names.json  track3-record-metadata.json
web/: README.md  astro.config.mjs  package-lock.json  package.json
web/public/: fingerprints.json  traces-manifest.json
web/src/layouts/: Layout.astro
(+9 files in other folders)
