[project]
name = "fingerprinting"
version = "0.1.0"
description = "Small optimizer comparison experiments."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5",
    "torchvision>=0.20",
    "tqdm>=4.66",
    "torch-shampoo @ git+https://github.com/facebookresearch/optimizers.git",
]

[tool.uv]
package = false
